--- a/sdk/translation/azure-ai-documenttranslator/pom.xml
+++ b/sdk/translation/azure-ai-documenttranslator/pom.xml
@@ -14,7 +14,7 @@
   <version>1.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-ai-documenttranslator;current} -->
 
   <name>Microsoft Azure client library for Document Translation</name>
-  <description>Please note, this package has been deprecated and will no longer be maintained after May 2026.
+  <description>Please note, this package has been deprecated and will no longer be maintained.
     We encourage you to upgrade to the replacement package, `azure-ai-translation-document`, to continue receiving updates.
     Refer to our deprecation policy (https://aka.ms/azsdk/support-policies) for more details.</description>
 
