--- a/sdk/translation/azure-ai-documenttranslator/pom.xml
+++ b/sdk/translation/azure-ai-documenttranslator/pom.xml
@@ -14,7 +14,9 @@
   <version>1.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-ai-documenttranslator;current} -->
 
   <name>Microsoft Azure client library for Document Translation</name>
-  <description>This package contains Microsoft Azure Document Translation client library.</description>
+  <description>Please note, this package has been deprecated and will no longer be maintained.
+    We encourage you to upgrade to the replacement package, `azure-ai-translation-document`, to continue receiving updates.
+    Refer to our deprecation policy (https://aka.ms/azsdk/support-policies) for more details.</description>
 
   <distributionManagement>
     <site>
